# tram_btrfs

./: Cargo.toml  Readme.md
src/: globals.rs  instruction.txt  main.rs
src/core/: app_config.rs  btrfs_manager.rs  error.rs  mod.rs  utils.rs
src/core/btrfs_objects/: group.rs  group_snapshot.rs  subvolume_snapshot.rs
src/tui/: app_tui.rs  broken_snapshots_ui.rs  groups_ui.rs  mod.rs  settings_ui.rs  snapshots_ui.rs  subvolumes_ui.rs
