[package]
name = "tram_btrfs"
version = "1.0.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
file-lock = "2.1.11"
nix = { version = "0.31.3", features = ["mount", "user"] }
ratatui = "0.30.2"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive", "rc", "std"] }
thiserror = "2.0.18"
time = { version = "0.3.51", features = ["formatting", "local-offset", "macros"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.23"
tui-input = "0.15.3"
