[package]
name = "tram_btrfs"
version = "1.0.4"
edition = "2024"

description = "A TUI Btrfs snapshot manager"
license = "GPL-3.0-or-later"
repository = "https://github.com/Xiaomony/tram_btrfs"
homepage = "https://github.com/Xiaomony/tram_btrfs"
readme = "Readme.md"

keywords = [
    "btrfs",
    "snapshot",
    "tui"
]

categories = [
    "command-line-utilities"
]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.6"
color-eyre = "0.6.5"
crossterm = "0.29.0"
nix = { version = "0.31.3", features = ["mount", "user", "fs"] }
ratatui = "0.30.2"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive", "rc", "std"] }
thiserror = "2.0.18"
time = { version = "0.3.51", features = ["formatting", "local-offset", "macros"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.23"
tui-input = "0.15.3"
